@@ -1,3 +1,7 @@
+2002-08-21  Max Horn  <max@quendi.de>
+
+	* Engine.pm: Fixed "fink remove" command
+
 2002-08-19  Max Horn  <max@quendi.de>
 
 	* Engine.pm, PkgVersion.pm: Changed the data path for "fink remove" a bit
